--- a/backend/web/assets/semantic/slider.css
+++ b/backend/web/assets/semantic/slider.css
@@ -1,11 +1,90 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-body {
-    background-color: #0D1B2B;
-    overflow-x: hidden;
-    font-family: roboto;
-    -webkit-font-smoothing: antialiased;
-    margin: 0;
+body{
+  overflow: hidden;
+  height: 100%;
 }
+
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+div.relative {
+    position: relative;
+    width: 1200px;
+    height: 200px;
+    left: 50px;
+}
+
+
+
+i.icon.lock:before {
+    content: "\f023";
+}
+i.icon:before {
+    background: 0 0!important;
+}
+*, :after, :before {
+    box-sizing: inherit;
+}
+
+div.right-login{
+
+}
+#logout{
+  position: absolute;
+  z-index: 15;
+  top: 20%;
+  left: 90%;
+}
+.ui.yellow.button {
+    box-shadow: 0 0 0 0 rgba(34,36,38,.15) inset;
+}
+.ui.yellow.button, .ui.yellow.buttons .button {
+    background-color: #fbbd08;
+    color: #fff;
+    text-shadow: none;
+    background-image: none;
+}
+.ui.button, .ui.buttons .button, .ui.buttons .or {
+    font-size: 1rem;
+}
+.ui.yellow.button:active, .ui.yellow.buttons .button:active {
+    background-color: #cd9903;
+    color: #fff;
+    text-shadow: none;
+}
+.ui.yellow.button:hover, .ui.yellow.buttons .button:hover {
+    background-color: #eaae00;
+    color: #fff;
+    text-shadow: none;
+}
+.ui.button {
+    cursor: pointer;
+    display: inline-block;
+    min-height: 1em;
+    outline: 0;
+    border: none;
+    vertical-align: baseline;
+    background: #e0e1e2 none;
+    color: rgba(0,0,0,.6);
+    font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif;
+    margin: 0 .25em 0 0;
+    padding: .78571429em 1.5em .78571429em;
+    text-transform: none;
+    text-shadow: none;
+    font-weight: 700;
+    line-height: 1em;
+    font-style: normal;
+    text-align: center;
+    text-decoration: none;
+    border-radius: .28571429rem;
+    box-shadow: 0 0 0 1px transparent inset, 0 0 0 0 rgba(34,36,38,.15) inset;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
+    transition: opacity .1s ease,background-color .1s ease,color .1s ease,box-shadow .1s ease,background .1s ease;
+    will-change: '';
+    -webkit-tap-highlight-color: transparent;
+}
+
 .flex {
     display: -webkit-flex;
     display: flex;
