--- a/backend/web/assets/semantic/site.css
+++ b/backend/web/assets/semantic/site.css
@@ -1,36 +1,36 @@
 div.relative {
     position: relative;
-    width: 1200px;
+    width: 96%;
     height: 200px;
-    left: 50px;
+    /*left: 50px;*/
 }
 
 #img-btn1 {
   position: absolute;
   z-index: 15;
   /*top: 20%;*/
-  left: 200px;
+  left: 20%;
   /*width: 200px;*/
 }
 #img-btn2 {
   position: absolute;
   z-index: 15;
   /*top: 20%;*/
-  left: 100px;
+  left: 12%;
   /*width: 100px;*/
 }
 #img-btn3 {
   position: absolute;
   z-index: 15;
   top: 20%;
-  left: 150px;
+  /*left: 150px;*/
   width: 50px;
 }
 #img-fix {
   position: absolute;
   z-index: 15;
   top: 20%;
-  left: 100px;
+  left: 12%;
   width: 200px;
 }
 #logout{
@@ -38,4 +38,40 @@ div.relative {
   z-index: 15;
   top: 20%;
   left: 90%;
+}
+@media only screen and (min-width: 971px){
+
+  #img-btn1 {
+    position: absolute;
+    z-index: 15;
+    /*top: 20%;*/
+    /*left: 24%;*/
+    /*width: 200px;*/
+  }
+
+  #img-btn3 {
+    position: absolute;
+    z-index: 15;
+    top: 20%;
+    /*left: 150px;*/
+    width: 50px;
+  }
+}
+@media only screen and (min-width: 1326px){
+
+  #img-btn1 {
+    position: absolute;
+    z-index: 15;
+    /*top: 20%;*/
+    left: 20%;
+    /*width: 200px;*/
+  }
+
+  #img-btn3 {
+    position: absolute;
+    z-index: 15;
+    top: 20%;
+    /*left: 150px;*/
+    width: 50px;
+  }
 }
